# SDLU

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
SDLU/: CMakeLists.txt  SDLU.hpp  Util.hpp  alibi.cpp
SDLU/exceptions/: CMakeLists.txt  Exceptions.hpp  ObjectCreationException.hpp
SDLU/graphics/: CMakeLists.txt  Graphics.hpp  RenderTarget.cpp  RenderTarget.hpp  RenderWindow.cpp  RenderWindow.hpp
SDLU/graphics/drawable/: CMakeLists.txt  Drawable.hpp  Transformable.cpp  Transformable.hpp
SDLU/graphics/drawable/shapes/: CMakeLists.txt  Rectangle.cpp  Rectangle.hpp  Shape.cpp  Shape.hpp
SDLU/structures/: CMakeLists.txt  Color.cpp  Color.hpp  Mouse.cpp  Mouse.hpp  Vector2.hpp  Window.cpp  Window.hpp
SDLU_Example/: CMakeLists.txt  header.hpp  main.cpp
docs/html/: _clock_8cpp.html  _clock_8hpp.html  _clock_8hpp_source.html  _color_8cpp.html  _color_8cpp.js  _color_8hpp.html  _color_8hpp_source.html  _cursor_8cpp.html  _cursor_8hpp.html  _cursor_8hpp_source.html  _drawable_8hpp.html  _drawable_8hpp_source.html  _graphics_8hpp.html  _graphics_8hpp_source.html  _mouse_8cpp.html  _mouse_8hpp.html  _mouse_8hpp_source.html  _rectangle_8cpp.html  _rectangle_8hpp.html  _rectangle_8hpp_source.html  _render_target_8cpp.html  _render_target_8hpp.html  _render_target_8hpp_source.html  _render_window_8cpp.html  _render_window_8hpp.html  _render_window_8hpp_source.html  _s_d_l_u_8cpp.html  _s_d_l_u_8cpp.js  _s_d_l_u_8hpp.html  _s_d_l_u_8hpp.js  _s_d_l_u_8hpp_source.html  _shape_8cpp.html  _shape_8hpp.html  _shape_8hpp_source.html  _time_8cpp.html  _time_8cpp.js  _time_8hpp.html  _time_8hpp.js  _time_8hpp_source.html  _transformable_8cpp.html  (+119 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  (+65 more)
examples/: .main.cpp.swp  CMakeLists.txt  header.hpp  main.cpp
include/: SDLU.hpp  Util.hpp
include/graphics/: RenderTarget.hpp  RenderWindow.hpp
include/graphics/drawable/: Drawable.hpp  Transformable.hpp
include/graphics/drawable/shapes/: Rectangle.hpp  Shape.hpp
include/structures/: .Time.hpp.swp  Clock.hpp  Color.hpp  Cursor.hpp  Mouse.hpp  Time.hpp  Vector2.hpp  Window.hpp
lib/sdl2_gfx/: CMakeLists.txt
src/: SDLU.cpp
src/graphics/: RenderTarget.cpp  RenderWindow.cpp
src/graphics/drawable/: Transformable.cpp
src/graphics/drawable/shapes/: Rectangle.cpp  Shape.cpp
src/structures/: .Time.cpp.swp  Clock.cpp  Color.cpp  Cursor.cpp  Mouse.cpp  Time.cpp  Window.cpp
